--- a/kong/kong.yml
+++ b/kong/kong.yml
@@ -1,13 +1,5 @@
 _format_version: "3.0"
 services:
-  - name: crypto-service
-    url: http://crypto-service:3002
-    routes:
-      - name: crypto-route
-        paths:
-          - /api/decrypt
-          - /api/encrypt
-        strip_path: false
   - name: user-service
     url: http://user-service:3003
     routes:
@@ -15,6 +7,12 @@ services:
         paths:
           - /api/auth/register
           - /api/auth/login
+        strip_path: false
+        plugins:
+          - name: crypto-decrypt   # decrypt only for this route
+
+      - name: user-route-no-decrypt
+        strip_path: false
+        paths:
           - /api/auth/refresh
           - /api/auth/logout
-        strip_path: false
