Feat: Add Kong Custom Plugin To Check Token Authentication

--- a/kong/kong.yml
+++ b/kong/kong.yml
@@ -23,4 +23,8 @@ services:
       - name: product-route
         paths:
           - /api/product
+          - /api/categories
         strip_path: false
+        plugins:
+          - name: user-auth-token-handler
+          
