--- a/kong/kong.conf
+++ b/kong/kong.conf
@@ -1,3 +1,3 @@
 database = off
 declarative_config = /etc/kong/kong.yml
-plugins = bundled,crypto-decrypt
+plugins = bundled,crypto-decrypt,user-auth-token-handler
