--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
               - 'product-service/**'
             crypto:
               - 'crypto-service/**'
+
       - id: set-matrix
         run: |
           services=$(jq -c -n \
@@ -33,45 +34,72 @@ jobs:
               if $product == "true" then {service:"product"} else empty end,
               if $crypto == "true" then {service:"crypto"} else empty end
             ] }')
-          echo "services=$services" >> $GITHUB_OUTPUT
 
+          # if no services were included, inject a placeholder so matrix isn't empty
+          if [ "$(echo "$services" | jq '.include | length')" -eq 0 ]; then
+            services='{"include":[{"service":"__none__"}]}'
+          fi
+
+          echo "services=$services" >> $GITHUB_OUTPUT
 
   build-test:
     needs: detect-changes
-    if: ${{ fromJson(needs.detect-changes.outputs.services).include != '' }}
     runs-on: ubuntu-latest
     strategy:
       matrix: ${{ fromJson(needs.detect-changes.outputs.services) }}
+
     steps:
       - uses: actions/checkout@v4
+
+      # quick early-step to show why the job is a placeholder (optional)
+      - name: Placeholder / no-op when no services changed
+        if: ${{ matrix.service == '__none__' }}
+        run: |
+          echo "No services changed — skipping build/test for this matrix entry."
+
+      # Below steps only run when a real service changed
       - name: Set up Go
+        if: ${{ matrix.service != '__none__' }}
         uses: actions/setup-go@v5
         with:
           go-version: '1.22'
+
       - name: Lint & Vet
-        working-directory: service-${{ matrix.service }}
+        if: ${{ matrix.service != '__none__' }}
+        working-directory: ${{ format('{0}-service', matrix.service) }}
         run: |
           go vet ./...
           go install golang.org/x/lint/golint@latest
           golint ./... || true
+
       - name: Run Tests
-        working-directory: service-${{ matrix.service }}
+        if: ${{ matrix.service != '__none__' }}
+        working-directory: ${{ format('{0}-service', matrix.service) }}
         run: go test ./... -v
+
       - name: Run Gosec Security Scanner
-        uses: securego/gosec@master
-        with:
-          args: ./service-${{ matrix.service }}/...
-      - name: Build Docker Image
+        if: ${{ matrix.service != '__none__' }}
         run: |
-          docker build -t ghcr.io/${{ github.repository }}/service-${{ matrix.service }}:latest service-${{ matrix.service }}
+          # run gosec from repo root targeting the service folder
+          go install github.com/securego/gosec/v2/cmd/gosec@latest
+          $GOPATH/bin/gosec ./.../${{ format('{0}-service', matrix.service) }}
+
+      - name: Build Docker Image
+        if: ${{ matrix.service != '__none__' }}
+        run: |
+          docker build -t ghcr.io/${{ github.repository }}/service-${{ matrix.service }}:latest ${{ format('{0}-service', matrix.service) }}
+
       - name: Scan Docker Image with Trivy
+        if: ${{ matrix.service != '__none__' }}
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: ghcr.io/${{ github.repository }}/service-${{ matrix.service }}:latest
           format: table
           exit-code: '1'
           ignore-unfixed: true
+
       - name: Push Docker Image
+        if: ${{ matrix.service != '__none__' }}
         run: |
           echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
           docker push ghcr.io/${{ github.repository }}/service-${{ matrix.service }}:latest
