--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,14 @@ jobs:
         with:
           go-version: '1.22'
 
+      - name: Install gosec
+        run: go install github.com/securego/gosec/v2/cmd/gosec@latest
+
+      - name: Run gosec
+        run: |
+          export PATH=$PATH:$(go env GOPATH)/bin
+          gosec ./product-service/...
+
       - name: Lint & Vet
         if: ${{ matrix.service != '__none__' }}
         working-directory: ${{ format('{0}-service', matrix.service) }}
