--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,10 @@ jobs:
         with:
           go-version: '1.24.6'
 
+      - name: Download dependencies
+        run: go mod download
+        working-directory: ${{ matrix.service }}
+
       - name: Install gosec
         run: go install github.com/securego/gosec/v2/cmd/gosec@latest
 
