--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Download dependencies
         run: go mod download
-        working-directory: ${{ matrix.service }}
+        working-directory: ${{ format('{0}-service', matrix.service) }}
 
       - name: Install gosec
         run: go install github.com/securego/gosec/v2/cmd/gosec@latest
