Feat: CI Integration

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,13 +68,18 @@ jobs:
         run: go mod download
         working-directory: ${{ format('{0}-service', matrix.service) }}
 
+      - name: Fix Go module path
+        run: |
+          go mod edit -module=github.com/${{ github.repository }}/${{ format('{0}-service', matrix.service) }}
+        working-directory: ${{ format('{0}-service', matrix.service) }}
+
       - name: Install gosec
         run: go install github.com/securego/gosec/v2/cmd/gosec@latest
 
       - name: Run gosec
         run: |
           export PATH=$PATH:$(go env GOPATH)/bin
-          gosec ./product-service/...
+          gosec ./.../${{ format('{0}-service', matrix.service) }}
 
       - name: Lint & Vet
         if: ${{ matrix.service != '__none__' }}
