--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,7 @@ jobs:
 
       - name: Fix Go module path
         run: |
-          go mod edit -module=github.com/${{ github.repository }}/${{ format('{0}-service', matrix.service) }}
+          go mod edit -module=github.com/SE/${{ format('{0}-service', matrix.service) }}
         working-directory: ${{ format('{0}-service', matrix.service) }}
 
       - name: Install gosec
@@ -81,13 +81,13 @@ jobs:
           export PATH=$PATH:$(go env GOPATH)/bin
           gosec ./.../${{ format('{0}-service', matrix.service) }}
 
-      # - name: Lint & Vet TODO: FIX THIS CI PIPELINE ISSUE 
-      #   if: ${{ matrix.service != '__none__' }}
-      #   working-directory: ${{ format('{0}-service', matrix.service) }}
-      #   run: |
-      #     go vet ./...
-      #     go install golang.org/x/lint/golint@latest
-      #     golint ./... || true
+      - name: Lint & Vet
+        if: ${{ matrix.service != '__none__' }}
+        working-directory: ${{ format('{0}-service', matrix.service) }}
+        run: |
+          go vet ./...
+          go install golang.org/x/lint/golint@latest
+          golint ./... || true
 
       - name: Run Tests
         if: ${{ matrix.service != '__none__' }}
