--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,11 +81,10 @@ jobs:
           export PATH=$PATH:$(go env GOPATH)/bin
           gosec ./.../${{ format('{0}-service', matrix.service) }}
 
-      - name: Lint & Vet
+      - name: Lint
         if: ${{ matrix.service != '__none__' }}
         working-directory: ${{ format('{0}-service', matrix.service) }}
         run: |
-          go vet ./...
           go install golang.org/x/lint/golint@latest
           golint ./... || true
 
