--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,13 +98,15 @@ jobs:
       - name: Build Docker Image
         if: ${{ matrix.service != '__none__' }}
         run: |
-          docker build -t ghcr.io/${{ github.repository }}/service-${{ matrix.service }}:latest ${{ format('{0}-service', matrix.service) }}
+          REPO_LC=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          docker build -t ghcr.io/$REPO_LC/service-${{ matrix.service }}:latest \
+            ${{ format('{0}-service', matrix.service) }}
 
       - name: Scan Docker Image with Trivy
         if: ${{ matrix.service != '__none__' }}
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ghcr.io/${{ github.repository }}/service-${{ matrix.service }}:latest
+          image-ref: ghcr.io/$REPO_LC/service-${{ matrix.service }}:latest
           format: table
           exit-code: '1'
           ignore-unfixed: true
@@ -113,4 +115,4 @@ jobs:
         if: ${{ matrix.service != '__none__' }}
         run: |
           echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-          docker push ghcr.io/${{ github.repository }}/service-${{ matrix.service }}:latest
+          docker push ghcr.io/$REPO_LC/service-${{ matrix.service }}:latest
