--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,12 +97,16 @@ jobs:
           docker build -t ghcr.io/$REPO_LC/service-${{ matrix.service }}:latest \
             ${{ format('{0}-service', matrix.service) }}
 
+      - name: Set lowercase repo name
+        run: echo "REPO_LC=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
+
       - name: Scan Docker Image with Trivy
         if: ${{ matrix.service != '__none__' }}
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ghcr.io/$REPO_LC/service-${{ matrix.service }}:latest
-          format: table
+          image-ref: ghcr.io/${{ env.REPO_LC }}/service-${{ matrix.service }}:latest
+          format: 'table'
+          severity: 'CRITICAL,HIGH'
           exit-code: '1'
           ignore-unfixed: true
 
