--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,18 +46,16 @@ jobs:
     needs: detect-changes
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix: ${{ fromJson(needs.detect-changes.outputs.services) }}
 
     steps:
       - uses: actions/checkout@v4
 
-      # quick early-step to show why the job is a placeholder (optional)
-      - name: Placeholder / no-op when no services changed
+      - name: Placeholder / no-op
         if: ${{ matrix.service == '__none__' }}
-        run: |
-          echo "No services changed — skipping build/test for this matrix entry."
+        run: echo "No services changed — skipping build/test."
 
-      # Below steps only run when a real service changed
       - name: Set up Go
         if: ${{ matrix.service != '__none__' }}
         uses: actions/setup-go@v5
@@ -65,17 +63,19 @@ jobs:
           go-version: '1.24.6'
 
       - name: Download dependencies
-        run: go mod download
+        if: ${{ matrix.service != '__none__' }}
         working-directory: ${{ format('{0}-service', matrix.service) }}
+        run: go mod download
 
       - name: Install gosec
+        if: ${{ matrix.service != '__none__' }}
         run: |
           go install github.com/securego/gosec/v2/cmd/gosec@latest
           echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
 
       - name: Run gosec
-        run: |
-          gosec ./.../${{ format('{0}-service', matrix.service) }}
+        if: ${{ matrix.service != '__none__' }}
+        run: gosec ./.../${{ format('{0}-service', matrix.service) }}
 
       - name: Lint
         if: ${{ matrix.service != '__none__' }}
@@ -84,8 +84,7 @@ jobs:
           go install golang.org/x/lint/golint@latest
           golint ./... || true
 
-      # TODO: Enable When Unit Test Already Created
-      # - name: Run Tests
+      # - name: Run Tests (enable later)
       #   if: ${{ matrix.service != '__none__' }}
       #   working-directory: ${{ format('{0}-service', matrix.service) }}
       #   run: go test ./... -v
@@ -94,24 +93,35 @@ jobs:
         if: ${{ matrix.service != '__none__' }}
         run: |
           REPO_LC=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          echo "REPO_LC=$REPO_LC" >> $GITHUB_ENV
           docker build -t ghcr.io/$REPO_LC/service-${{ matrix.service }}:latest \
             ${{ format('{0}-service', matrix.service) }}
-
-      - name: Set lowercase repo name
-        run: echo "REPO_LC=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
-
-      - name: Scan Docker Image with Trivy
-        if: ${{ matrix.service != '__none__' }}
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: ghcr.io/${{ env.REPO_LC }}/service-${{ matrix.service }}:latest
-          format: 'table'
-          severity: 'CRITICAL,HIGH'
-          exit-code: '1'
-          ignore-unfixed: true
 
       - name: Push Docker Image
         if: ${{ matrix.service != '__none__' }}
         run: |
           echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-          docker push ghcr.io/$REPO_LC/service-${{ matrix.service }}:latest
+          docker push ghcr.io/${{ env.REPO_LC }}/service-${{ matrix.service }}:latest
+
+
+  security-scan:
+    needs: build-test
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix: ${{ fromJson(needs.detect-changes.outputs.services) }}
+
+    steps:
+      - name: Placeholder / no-op
+        if: ${{ matrix.service == '__none__' }}
+        run: echo "No services changed — skipping scan."
+
+      - name: Scan Docker Image with Trivy
+        if: ${{ matrix.service != '__none__' }}
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ghcr.io/${{ github.repository }}/service-${{ matrix.service }}:latest
+          format: 'table'
+          severity: 'CRITICAL,HIGH'
+          exit-code: '1'
+          ignore-unfixed: true
