--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,7 +123,7 @@ jobs:
         if: ${{ matrix.service != '__none__' }}
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ghcr.io/${{ github.repository }}/service-${{ matrix.service }}:latest
+          image-ref: ghcr.io/${{ github.repository_owner }}/scalable-ecommerce/service-${{ matrix.service }}:latest
           format: 'table'
           severity: 'CRITICAL,HIGH'
           exit-code: '1'
