--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,7 +109,7 @@ jobs:
 
 
   security-scan:
-    needs: detect-changes
+    needs: [detect-changes, build-test]
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
