--- a/.github/workflows/pr_validator.yml
+++ b/.github/workflows/pr_validator.yml
@@ -1,13 +1,9 @@
-name: CI
+name: Pull Request CI
 
 on:
-  push:
-    branches: ["master"]
   pull_request:
-
-permissions:
-  contents: read
-  packages: write
+    branches:
+      - master
 
 jobs:
   detect-changes:
@@ -60,27 +56,6 @@ jobs:
         if: ${{ matrix.service == '__none__' }}
         run: echo "No services changed — skipping build/test."
 
-      - name: Set up Go
-        if: ${{ matrix.service != '__none__' }}
-        uses: actions/setup-go@v5
-        with:
-          go-version: '1.24.6'
-
-      - name: Download dependencies
-        if: ${{ matrix.service != '__none__' }}
-        working-directory: ${{ format('{0}-service', matrix.service) }}
-        run: go mod download
-
-      - name: Install gosec
-        if: ${{ matrix.service != '__none__' }}
-        run: |
-          go install github.com/securego/gosec/v2/cmd/gosec@latest
-          echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
-
-      - name: Run gosec
-        if: ${{ matrix.service != '__none__' }}
-        run: gosec ./.../${{ format('{0}-service', matrix.service) }}
-
       - name: Lint
         if: ${{ matrix.service != '__none__' }}
         working-directory: ${{ format('{0}-service', matrix.service) }}
@@ -92,21 +67,6 @@ jobs:
       #   if: ${{ matrix.service != '__none__' }}
       #   working-directory: ${{ format('{0}-service', matrix.service) }}
       #   run: go test ./... -v
-
-      - name: Build Docker Image
-        if: ${{ matrix.service != '__none__' }}
-        run: |
-          REPO_LC=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
-          echo "REPO_LC=$REPO_LC" >> $GITHUB_ENV
-          docker build -t ghcr.io/$REPO_LC/service-${{ matrix.service }}:latest \
-            ${{ format('{0}-service', matrix.service) }}
-
-      - name: Push Docker Image
-        if: ${{ matrix.service != '__none__' }}
-        run: |
-          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-          docker push ghcr.io/${{ env.REPO_LC }}/service-${{ matrix.service }}:latest
-
 
   security-scan:
     needs: [detect-changes, build-test]
@@ -120,12 +80,12 @@ jobs:
         if: ${{ matrix.service == '__none__' }}
         run: echo "No services changed — skipping scan."
 
-      - name: Scan Docker Image with Trivy
+      - name: Install gosec
         if: ${{ matrix.service != '__none__' }}
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: ghcr.io/${{ github.repository_owner }}/scalable-ecommerce/service-${{ matrix.service }}:latest
-          format: 'table'
-          severity: 'CRITICAL,HIGH'
-          exit-code: '1'
-          ignore-unfixed: true
+        run: |
+          go install github.com/securego/gosec/v2/cmd/gosec@latest
+          echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
+
+      - name: Run gosec
+        if: ${{ matrix.service != '__none__' }}
+        run: gosec ./.../${{ format('{0}-service', matrix.service) }}
