Feat: Dsiable Test

--- a/.github/workflows/pr_validator.yml
+++ b/.github/workflows/pr_validator.yml
@@ -63,10 +63,10 @@ jobs:
           go install golang.org/x/lint/golint@latest
           golint ./... || true
 
-      - name: Run Tests
-        if: ${{ matrix.service != '__none__' }}
-        working-directory: ${{ format('{0}-service', matrix.service) }}
-        run: go test ./... -v
+      # - name: Run Tests (enable later)
+      #   if: ${{ matrix.service != '__none__' }}
+      #   working-directory: ${{ format('{0}-service', matrix.service) }}
+      #   run: go test ./... -v
 
   security-scan:
     needs: [detect-changes, build-test]
