--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
               - 'product-service/**'
             crypto:
               - 'crypto-service/**'
-            shopping-cart:
+            shopping_cart:
               - 'shopping-cart-service/**'
 
       - id: set-matrix
@@ -40,7 +40,7 @@ jobs:
               if $user == "true" then {service:"user"} else empty end,
               if $product == "true" then {service:"product"} else empty end,
               if $crypto == "true" then {service:"crypto"} else empty end,
-              if $shopping-cart == "true" then {service:"shopping-cart"} else empty end
+              if $shopping_cart == "true" then {service:"shopping-cart"} else empty end
             ] }')
 
           if [ "$(echo "$services" | jq '.include | length')" -eq 0 ]; then
