--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
               - 'product-service/**'
             crypto:
               - 'crypto-service/**'
+            shopping_cart:
+              - 'shopping-cart-service/**'
 
       - id: set-matrix
         run: |
@@ -33,10 +35,12 @@ jobs:
             --arg user ${{ steps.changes.outputs.user }} \
             --arg product ${{ steps.changes.outputs.product }} \
             --arg crypto ${{ steps.changes.outputs.crypto }} \
+            --arg shopping-cart ${{ steps.changes.outputs.shopping-cart }} \
             '{ include: [
               if $user == "true" then {service:"user"} else empty end,
               if $product == "true" then {service:"product"} else empty end,
-              if $crypto == "true" then {service:"crypto"} else empty end
+              if $crypto == "true" then {service:"crypto"} else empty end,
+              if $shopping_cart == "true" then {service:"shopping-cart"} else empty end
             ] }')
 
           if [ "$(echo "$services" | jq '.include | length')" -eq 0 ]; then
