--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
             --arg user ${{ steps.changes.outputs.user }} \
             --arg product ${{ steps.changes.outputs.product }} \
             --arg crypto ${{ steps.changes.outputs.crypto }} \
-            --arg shopping-cart ${{ steps.changes.outputs.shopping-cart }} \
+            --arg shopping_cart ${{ steps.changes.outputs.shopping_cart }} \
             --arg store ${{ steps.changes.outputs.store }} \
             '{ include: [
               if $user == "true" then {service:"user"} else empty end,
@@ -52,7 +52,6 @@ jobs:
           fi
 
           echo "services=$services" >> $GITHUB_OUTPUT
-
 
   build-test:
     needs: detect-changes
