--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,8 @@ jobs:
               - 'crypto-service/**'
             shopping_cart:
               - 'shopping-cart-service/**'
+            store:
+              - 'store-service/**'
 
       - id: set-matrix
         run: |
@@ -35,12 +37,14 @@ jobs:
             --arg user ${{ steps.changes.outputs.user }} \
             --arg product ${{ steps.changes.outputs.product }} \
             --arg crypto ${{ steps.changes.outputs.crypto }} \
-            --arg shopping-cart ${{ steps.changes.outputs.shopping-cart }} \
+            --arg shopping_cart ${{ steps.changes.outputs.shopping_cart }} \
+            --arg store ${{ steps.changes.outputs.store }} \
             '{ include: [
               if $user == "true" then {service:"user"} else empty end,
               if $product == "true" then {service:"product"} else empty end,
               if $crypto == "true" then {service:"crypto"} else empty end,
-              if $shopping_cart == "true" then {service:"shopping-cart"} else empty end
+              if $shopping_cart == "true" then {service:"shopping-cart"} else empty end,
+              if $store == "true" then {service:"store"} else empty end
             ] }')
 
           if [ "$(echo "$services" | jq '.include | length')" -eq 0 ]; then
@@ -48,7 +52,6 @@ jobs:
           fi
 
           echo "services=$services" >> $GITHUB_OUTPUT
-
 
   build-test:
     needs: detect-changes
